deploy/k8s/overlays/local/local-api-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: omnistudy-api
spec:
  template:
    spec:
      containers:
        - name: api
          imagePullPolicy: Always
