deploy/k8s/overlays/local/local-worker-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: omnistudy-worker
spec:
  template:
    spec:
      containers:
        - name: worker
          imagePullPolicy: Always
