deploy/k8s/overlays/local/local-ingress-delete.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: omnistudy-api
$patch: delete
